[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylinac-bulkcbct"
version = "0.1.0"
description = "Bulk CBCT analysis tooling built around Pylinac"
readme = "README.md"
authors = [{name = "Pylinac BulkCBCT Team"}]
requires-python = ">=3.10"

[project.dependencies]
flask = ">=3.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pylinac-bulkcbct-scan = "pylinac_bulkcbct.cli:main"
pylinac-bulkcbct-ui = "pylinac_bulkcbct.ui:main"
